--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "c0b16a37-a47d-478a-9032-8435e7f87128"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
